# AetherForge-AI-Native-Game-Engine-for-Autonomous-Worlds

./: Cargo.toml
src/: cache.rs  main.rs  main_new.rs  memory.rs  metrics.rs
src/agentdb/: memory_persistence.rs  wasm_bindings.rs
src/vector_index/: mod.rs
