[dependencies]
# Async runtime
tokio = { version = "1.40", features = ["full"] }
async-trait = "0.1"

# HTTP client and server
reqwest = { version = "0.12", features = ["json", "stream"] }
axum = "0.7"
tower = "0.5"
tower-http = { version = "0.5", features = ["cors", "trace"] }

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
toml = "0.8"

# OpenAI API integration
async-openai = "0.24"

# OAuth2 authentication
oauth2 = "4.4"

# Database and storage
sqlx = { version = "0.8", features = ["runtime-tokio-native-tls", "sqlite", "postgres"] }

# Vector database client - FORCE exact version 1.11.0
qdrant-client = "=1.11.0"

# Logging and tracing
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Error handling
thiserror = "1.0"
anyhow = "1.0"

# UUID generation
uuid = { version = "1.10", features = ["v4", "serde"] }

# Time handling
chrono = { version = "0.4", features = ["serde"] }

# Environment variables
dotenvy = "0.15"

# Configuration management
config = "0.14"

# Security and encryption
argon2 = "0.5"
rand = "0.8"
jsonwebtoken = "9.3"

# Concurrent data structures
dashmap = "6.1"
parking_lot = "0.12"

# Vector operations
ndarray = "0.16"

# Workflow and state machine
serde_yaml = "0.9"

# WASM support for agentdb integration
wasm-bindgen = "0.2"
wasm-bindgen-futures = "0.4"
js-sys = "0.3"
web-sys = { version = "0.3", features = ["console", "Window", "Document", "Element", "Storage"] }
console_error_panic_hook = "0.1"
serde-wasm-bindgen = "0.6"

# IndexedDB for browser storage
rexie = "0.5"

# WASM serialization
bincode = "1.3"

# Caching - high-performance async-aware cache
moka = { version = "0.12", features = ["future"] }

# Memory management - fast bump allocation for game state
bumpalo = "3.16"

# Application metrics - collection and instrumentation
metrics = "0.24"
metrics-exporter-prometheus = "0.17"

# FIX: Add rustls with ring crypto provider
rustls = { version = "0.23", features = ["ring"] }
